--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
-    "react-native-web": "0.17.7"
+    "react-native-web": "0.17.7",
+    "react-native-webview": "^11.21.2",
+    "react-native-youtube-iframe": "^2.2.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
